# tanatloc-converters

./: .cppcheck-suppress  .gitignore  CMakeLists.txt  README.md  format.sh  local.sonarcloud.sh
.github/: renovate.json
.github/workflows/: cppcheck.yml  shellcheck.yml
src/: DXFToGLTF.cpp  GmshToGLTF.cpp  StepSplit.cpp  StepToGLTF.cpp  VTUToGLTF.cpp
src/dxf/: DXFConverter.cpp  DXFConverter.hpp
src/dxf/lib/: Arc.cpp  Arc.hpp  Circle.cpp  Circle.hpp  Defs.hpp  Line.cpp  Line.hpp  Polyline.cpp  Polyline.hpp  Spline.cpp  Spline.hpp  Utils.hpp  Vertex.cpp  Vertex.hpp
src/dxf_old/: DXFConverter.hpp
src/geometry/: Polygon.cpp  Polygon.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp
src/gmsh/: Gmsh.cpp  Gmsh.hpp
src/logger/: Logger.cpp  Logger.hpp
src/occ/: MainDocument.cpp  MainDocument.hpp  StepReader.cpp  StepReader.hpp  StepWriter.cpp  StepWriter.hpp  Triangulation.cpp  Triangulation.hpp  makePipe.hpp
src/utils/: utils.cpp  utils.hpp
src/vtk/: VTUReader.cpp  VTUReader.hpp
test/assets/: Cube.geo  Cube.msh  Cube.no_elements.msh  Cube.no_triangles.msh  Cube.no_vertices.msh  Cube.wrong.msh  Point.geo  Point.msh  Result.vtu  Result2Pieces.vtu  Result_streamTracer.vtu  Square.geo  Square.msh  circle.dxf  contact.dxf  cube_1.stp  curved.dxf  curved_twice.dxf  spline.dxf  spline_twice.dxf  square.dxf  square_hole.dxf
test/dxf/: DXFConverter.test.cpp
test/dxf/lib/: Arc.test.cpp  Circle.test.cpp  Line.test.cpp  Polyline.test.cpp  Vertex.test.cpp
test/geometry/: Polygon.test.cpp  Tetrahedron.test.cpp  Triangle.test.cpp  Vertex.test.cpp
test/gmsh/: Gmsh.test.cpp  Tetrahedron.test.cpp  Triangle.test.cpp
test/logger/: Logger.test.cpp
test/occ/: StepReader.test.cpp  Triangulation.test.cpp
test/threeJS/: ThreeJS.test.cpp
test/utils/: utils.test.cpp
test/vtk/: VTUReader.test.cpp
